[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/enemy_walk2.png" type="Texture" id=1]
[ext_resource path="res://assets/enemy_walk3.png" type="Texture" id=2]
[ext_resource path="res://assets/enemy_walk1.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Walker.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 21, 14.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 23, 14 )

[sub_resource type="Animation" id=8]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.501 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 32 ) ]
}

[node name="Walker" type="KinematicBody2D" groups=["stompables"]]
collision_layer = 4
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0.5 )
shape = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 1, 4 )
shape = SubResource( 7 )

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( -20, 15 )
cast_to = Vector2( 0, 10 )

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 20, 15 )
cast_to = Vector2( 0, 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 8 )

[connection signal="stomp" from="." to="." method="_on_Walker_stomp"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
